src/root.css
/* ... */
@media (max-width: 1900px) {
  .vertical-centered-flex-container,
  .products,
  .article-card-layout-blogs {
    grid-template-columns: repeat(4, 1fr);
  }
}
@media (max-width: 1300px) {
  .vertical-centered-flex-container,
  .products,
  .article-card-layout-blogs {
    grid-template-columns: repeat(3, 1fr);
  }
}
@media (max-width: 800px) {
  .vertical-centered-flex-container,
  .products,
  .article-card-layout-blogs {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (max-width: 600px) {
  .vertical-centered-flex-container,
  .article-card-layout-blogs {
    grid-template-columns: 1fr;
    grid-template-rows: 570px;
    gap: 20px;
    grid-auto-rows: 570px;
  }
  .products:not(.productrelatddiv .products) {
    grid-template-columns: 1fr;
    grid-template-rows: 570px;
    gap: 20px;
    grid-auto-rows: 570px;
  }
  .productrelatddiv .products {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .products:not(.productrelatddiv .products) > * {
    width: 100%;
    max-width: none !important;
  }
  .productrelatddiv .products > * {
    width: 90%;
  }
  .vertical-centered-flex-container > *,
  .article-card-layout-blogs > * {
    width: 100%;
    max-width: none !important;
  }
}
.vertical-centered-flex-container > *,
.products,
.article-card-layout-blogs > * {
  position: relative;
}
.hot-selling-container {
  width: max-content;
  padding: 10px 15px;
  margin-top: 10px;
}
.material-card-container {
  max-width: 2000px;
  margin: 0 auto;
}
.product-gallery-row,
.flex-container-with-images {
  width: 100%;
  margin: 0;
  position: absolute;
  bottom: 10px;
  left: 0px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 10px;
  box-sizing: border-box;
}
.product-gallery-row {
  width: 92%;
  justify-content: space-between !important;
  left: 50%;
  transform: translateX(-50%);
}
.circles {
  max-width: 78%;
  width: 78%;
  display: flex;
  align-items: center;
  justify-content: center;
  justify-content: flex-start;
  margin-bottom: 7px;
  min-height: 47px;
  gap: 5px;
  flex-wrap: wrap-reverse !important;
}
.circles > * {
  height: 32px;
  width: 32px;
  min-width: 28px !important;
  padding: 0;
  border-radius: 100000px;
  cursor: pointer;

  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.767);
}
.circles > *:first-child {
  margin-left: 0;
}
.adddiv {
  height: 47px;
  width: 47px;
  border-radius: 100000px;
  cursor: pointer;
  color: black;
  background-color: white;
  font-size: 30px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.relatedproducts {
  width: 100%;
  height: 2px;
  border-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: #bfbfbf;
  margin-bottom: 50px;
  max-width: 1400px;
}
.relatedproducts > p {
  background-color: white;
  color: #bfbfbf;
  padding: 5px 30px;
}
.product-related-container {
  max-width: 2000px;
  margin: 50px auto;
}
.products {
  grid-auto-rows: 370px !important;
  grid-template-rows: 370px !important;
}
.product {
  border-radius: 10px 10px 0 0;
  overflow: hidden;
}
.imagediv {
  height: 300px;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.219);
}
.textdiv > *:first-child {
  margin: 5px 0 0 0;
}
.textdiv > *:last-child {
  margin: 0;
}
.technology-card2 {
  margin-bottom: 50px;
}
.image-container-sb {
  width: 100vw;
  margin: 0 auto;
}
.content-container {
  padding: 100px 0;
  margin: 0 auto;
  width: 90vw;
}
.technology-card2 {
  max-width: 95vw;
}
.technology-card1 {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
}
@media (max-width: 500px) {
  .tech-lauda-bold {
    font: 600 36px/47px Artnoova;
  }
}
.contact-info-container1 {
  background-color: transparent;
  max-width: 95vw;
  margin: 0 auto;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.contact-heading-text-style {
  margin-top: 0;
  margin-bottom: 20px;
}
.subject-container-with-icon {
  align-items: center;
}
.product-description-text-style {
  margin: 0;
}
.flex-row-container {
  border: none;
}
.bold-black-label {
  margin: 20px 0 10px 0;
}
.label5 {
  margin-top: 40px;
}
.submit-button-style {
  margin-top: 50px;
}
.contact-info-section1 {
  margin-bottom: 100px;
}
.image-container {
  height: auto;
  transform: translate(0px, 30px);
  width: 30px;
}
.form-container {
  max-width: 95vw;
}
.contact-section4 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.contact-section {
  padding: 0;
  height: auto;
}
.contact-section1 {
  width: 100%;
}
.contact-info-container1 {
  height: auto;
}
.contact-heading {
  margin: 0;
}
.contact-message {
  margin-top: 0px;
}
@media (max-width: 550px) {
  .contact-heading-text-style {
    font: 600 40px/50px Artnoova;
  }
  .form-container:not(.password-reset-form-container .input-with-icon) {
    padding: 48px 20px;
  }
  .flex-row-container {
    flex-direction: column;
    padding: 0;
    margin-top: 0;
  }
  .flex-row-container > * {
    width: 100%;
    margin: 0;
  }
  .label5 {
    margin-top: 165px;
  }
  .header-title-text-style {
    text-align: center;
  }

  .incontact > :nth-child(2) label {
    margin-top: 10px;
  }
}
.contact-info-section1 {
  max-width: 95vw;
  display: flex;
  align-items: center;
  justify-content: center;
}
.contact-info-section1 > * {
  width: 100%;
}
.vertical-spacer {
  display: flex;
  align-items: center;
  justify-content: center;
}
.contact-info-container-nav {
  text-wrap: wrap;
}
/* ... */

